--- a/Витамин Д.md
+++ b/Витамин Д.md
@@ -2,14 +2,33 @@
 Tags: #
 
 ---
-# Проявление
+Витамин D представляет собой группу жирорастворимых секостероидов, ответственных за увеличение всасывания в кишечнике кальция, магния и фосфатов, а также за многие другие биологические эффекты
+Кальцитриол также оказывает другие эффекты, в том числе на рост клеток, нервно-мышечную и иммунную функции, а также на уменьшение воспаления.
+- нормальная функция мышц
+- нормальная воспалительная реакция
+- нормальная функция иммунной системы
+
+Норма витамина Д **от 60 до 80 нг/мл**
+Доставерный уровень показывают не все лаборатории:
+- KDL; Invitro; Гемотест отнимать 20-30% от показателей.
+- Hrlix; Архимед; chromolab более достоверно. Жидкостная хроматометрия
+
+# Кофактор:
+- хорошо усваивается с йодом, магнием, К2 на 5000UI витамина K2 должно быть 100-150мг, форма МК-7
+- НЕ принимать с витамином С и Б12
+
+# Симптоматика недостатка:
+- Сильная усталость к вечеру или с самого утра 
 - Бессонница или плохой сон. Мозг, поддерживает циркадные ритмы (возможно перед сном принимать лучше)
-- Волосы, ломкость сухость
+- Волосы, ломкость сухость, влияет на выпадение волос т.к. большая концентрация находится в луковицах.
+- Снижения зрения.
+- Иммунитет, частые простуды более 2-3 раз в год.
 - Витилиго, проблемы с кожей
 - Зубы, кости. Отвечает за регуляцию кальция
 - Кортизол и Витами Д оба противовоспалительные гормоны, что требуется часто для организма
 - В почках происходит последний этап преоброазования витамина Д
 - Проблемы с ЖКТ раздраженный, колит 
+- если кальций больше 60-80нгр/мл, то кальций усваивается гораздо лучше из обычных продуктов и не предется использовать бады. 
 
 
 
