--- a/Желудок.md
+++ b/Желудок.md
@@ -6,6 +6,42 @@ Tags: #
 - Агрессия и неопределённость активная фаза конфликта, боль острая болезненая, интенсивная, во время стрессовой ситуации, внутри ситуации
 - в середине фазы выздоровления или после того как конфликт разрешен появляется тошнота, изжога, рвота. 
 
+- 
+-
+
+# Производит соляную кислоту
+Солянная кислота отвечает за усвоение:
+-  [[Белки]]
+- [[Витамины и минералы]] Б и С водорастворимые витамины
+- Микро макро элементов: медь, железо, магний, марганец молибден цинк и т.д.
+- Eсли кислотность понижена, то усвоение будет проблематичным то же самое и с [[Желчь Желочный|желочными кислотами]], это в свою очередь будет отражатся на [[Анализы|анализах]] в частности на ферритине ниже 50мг
+
+Мозг не подготавливается к еде. Быстрые перекусы. Еда перед телевизором. Еда в кампании. 
+
+- Что бы солянная кислота выробатывалась требуются витамины Б9, Б12
+
+# Проблемы:
+- "Желудок встал" причины могут быть, дефицит Витамина Б12, Б9, йод, цинк
+- Хочется спать после еды
+- Тяжесть в желудке после еды, мало соляной кислоты
+- Запоры, проблемы желчеотделения. Происходит интоксикация и потеря энергии. 
+- Газообразование. Вздутие
+	- После 9 желчь перестает вырабатывается следовательно еда начинает застаиваться.
+	- Мало клечатки
+	- Много углеводов на ночь
+	- Плохой отток желчи
+- Изжога возникает на фоне пониженной кислотности, **дефицит Б9 и Б12, дефицит цинка и йода** 
+- **Рефлюкс** возникает из-за низкой кислотности и брожения белка в 12 перстной кишке, соответственно газы поджимают сфинктер
+	- причины низкий белок ниже 72моль/л и фуритин ниже 50мкг/л
+	- Ацедин-Пепсин для восстановления кислоты или бетайн гидрохлорид 2-3 недели, не более 2 месяцев, или нефилтрованный яблочный уксус 10мл на 300мл воды перед едой
+	- Для быстрого снятия симптомов, выпить кокосового молока
+
+ГЭРБ, Язвы, Эзофагиты, СИБР, СРК
+`Основной механизм всех проблем сбитый режим работы ЖКТ. Выработка кислоты, выработка и высвобождение желчи, как следствие поджелудочная.`
+
+# Определение кислотности:
+- 
+
 
 
 ---
