--- a/Желчь Желочный.md
+++ b/Желчь Желочный.md
@@ -2,6 +2,8 @@
 Tags: #
 
 ---
+
+# Анатомия:
 жёлтая, коричневая или зеленоватая, очень горькая на вкус, имеющая специфический запах, выделяемая печенью и накапливаемая в жёлчном пузыре жидкость.
 ![[Digestive_system_showing_bile_duct.png]]
 - **Желчный пузырь** является резервуаром для накопления жёлчи, расположен на висцеральной поверхности печени в одноимённой ямке.
@@ -11,22 +13,29 @@ Tags: #
 # [Жёлчные кислоты](https://en.wikipedia.org/wiki/Bile_acid)
 - Первичные желчные кислоты синтезируются печенью. Вторичные желчные кислоты возникают в результате действия бактерий в толстой кишке.
 - Взрослые люди выделяют от 12 до 18 г желчных кислот в кишечник каждый день, в основном после еды. Размер пула желчных кислот составляет от 4 до 6 г, что означает, что желчные кислоты рециркулируются несколько раз в день. Около 95 % желчных кислот реабсорбируются за счет активного транспорта в подвздошной кишке и возвращаются обратно в печень для дальнейшей секреции в билиарную систему и желчный пузырь. Эта энтерогепатическая циркуляция желчных кислот обеспечивает низкую скорость синтеза, всего около 0,3 г / день, но при этом большие количества выделяются в кишечник.
+
+# Функции:
+- Антисептические
+- Слабительная, запоры это как раз проблемы желчеоттока
+- Усвоение питательных вещществ жирорастворримых [[Витамины и минералы]] A, D, E, K и жиров
 - Желчные кислоты оказывают метаболическое действие в организме, сходное с действием гормонов
 - Внутрипросветный гидролиз белков, жиров и углеводов при помощи ферментов; соли желчных кислот повышают растворимость жира на данной стадии
+- Состав желчи вода, аминокислоты и жиры
 
 ### Жиры:
-- Ферменты поджелудочной железы (липаза и колипаза) расщепляют длинноцепочечные триглицериды до жирных кислот и моноглицеридов, которые объединяются с желчными кислотами и фосфолипидами с образованием мицелл и в таком виде проникают в энтероциты подвздошной кишки. Из абсорбированных жирных кислот вновь синтезируются триглицериды, они объединяются с белками, холестерином и фосфолипидами с образованием хиломикронов, которые транспортируются лимфой. Среднецепочечные триглицериды абсорбируются в неизмененном виде.
-- Невсосавшиеся жиры «поглощают» [[Витамины#^fd2bbf|жирорастворимые витамины]] (A, D, E, K) и, возможно, некоторые минеральные вещества, вызывая дефицит этих веществ. Избыточный бактериальный рост сопровождается деконъюгацией и дегидроксилированием желчных кислот, затрудняя всасывание жиров. Неабсорбированные желчные кислоты стимулируют секрецию воды в толстой кишке и вызывают диарею.
+- Ферменты поджелудочной железы (липаза и колипаза) расщепляют длинноцепочечные триглицериды до жирных кислот и моноглицеридов, которые объединяются с желчными кислотами и фосфолипидами с образованием мицелл и в таком виде проникают в энтероциты подвздошной кишки. Из абсорбированных жирных кислот вновь синтезируются триглицериды, они объединяются с белками, [[Холестерин]]ом  и фосфолипидами с образованием хиломикронов, которые транспортируются лимфой. Среднецепочечные триглицериды абсорбируются в неизмененном виде.
+- Невсосавшиеся жиры «поглощают» [[Витамины и минералы#^fd2bbf|жирорастворимые витамины]] (A, D, E, K) и, возможно, некоторые минеральные вещества, вызывая дефицит этих веществ. Избыточный бактериальный рост сопровождается деконъюгацией и дегидроксилированием желчных кислот, затрудняя всасывание жиров. Неабсорбированные желчные кислоты стимулируют секрецию воды в толстой кишке и вызывают диарею.
 - ### Переваривание углеводов
 
-Панкреатическая амилаза и ферменты щеточной каемки микроворсинок расщепляют углеводы и дисахариды до моносахаридов. Бактерии толстой кишки перерабатывают неабсорбированные углеводы с выделением углекислого газа, метана, водорода и короткоцепочечных жирных кислот (бутирата, пропионата, ацетата, лактата). Под влиянием этих кислот развивается диарея. Образование газов вызывает вздутие живота.
+Панкреатическая амилаза и ферменты щеточной каемки микроворсинок расщепляют углеводы и дисахариды до моносахаридов. Бактерии толстой кишки перерабатывают неабсорбированные углеводы с выделением углекислого газа, метана, водорода и короткоцепочечных жирных кислот (бутирата, пропионата, ацетата, лактата). Под влиянием этих кислот развивается диарея. Образование газов вызывает [[Вздутие]] живота.
 ### Переваривание белков
 
 Пепсин осуществляет начальный этап переваривания белков в желудке (а также стимулирует высвобождение холецистокинина, имеющего важнейшее значение для стимуляции выработки панкреатических ферментов). Энтерокиназа, фермент щеточной каемки, превращает трипсиноген в трипсин; последний отвечает за активацию различных панкреатических протеаз. Активированные ферменты поджелудочной железы гидролизуют белки с образованием олигопептидов, которые непосредственно всасываются или расщепляются до аминокислот.
-# Застой и загушение:
+# Застой и загушение причины:
 - Основной механизм всех проблем это стресс
 - Образует: Хронический панкреатит, запоры, СРК
 - При застои желочи могут образовываться камни, что приводит к холицеститу и образованию полипов. 
+- Гипотериоз; Анемия; Малоподвижный образ жизни;
 - Застой разрушает печень, может приводить к жировому гипотозу, панкреатиту, и даже сахарному диабету.
 - Дискомфорт в теле.
 - Болезненость в правом подреберье
@@ -37,6 +46,17 @@ Tags: #
 - Запор или панос
 - Желтушность глаз и кожных покровов, последствие в виде кожного зуда
 - Структурные или функциональные нарушения желчевыводящей системы приводят к увеличению билирубина (желтуха) и желчных кислот в крови.
+
+# Симптоматик:
+- **Cухая кожа** первый признак нарушения обмена жиров — из-за не усвоения витаминов А, Е, К акне, не поддающееся терапии, боли в мышцах и суставах.
+- **Волосы**, выпадение из-за не усвоения витамина Д
+- Что касается витамина D - это прям бич. Очень часто он не усваивается с плохим оттоком жёлчи.
+- Жирный стул темного цвета, оставляющий следы на унитазе
+- Акне; Жировики
+- Нарушение гормонального фона (отсутствие либидо, а так же низкая фертильность)
+- Ангиомы
+- папиломы
+
 
 ##### Причина:
 - Не есть при стрессовых ситуациях, т.к. при стрессе происходит спазм желечного протока нарущающего выход сока [[Поджелудочная железа]].
@@ -72,3 +92,8 @@ Tags: #
 
 
 ---
+# Помощь для оттока желочи
+- расторопша и артишок, лецитин, фосфатидилхолин
+	- **Силимариновый комплекс**
+- клечатка
+- так же чуть-чуть омега-3
