--- a/Жир.md
+++ b/Жир.md
@@ -2,9 +2,83 @@
 Tags: #
 
 ---
-# Title
+# Основные виды жиром:
+![[food_triglyceride_type.png]]
+### Насыщенные жиры
+ 10-20% от общего потребления жиров
+- Норма 1-2 гр жира на кг веса при умеренной физ.активности
+- 900-1200 мг холестерина это дневная норма
+	- 1 желток 300мг холестерина
+
+### мононенасыщенные жиры:
+10-20% от общего потребления жиров
+- Подсолнечное, рапсовое, соевое, оливковое и арахисовое масла; орехи; авокадо; семечки.
+- Витамин Е активно влияет на выработку сперматозоидов
+- снижают риски возникновения заболеваний сердечно-сосудистой системы;
+- помогают контролировать уровень сахара в крови;
+- отвечают за работу иммунной системы; 
+- поддерживают здоровье глаз.
+### полиненасыщенные жирные кислоты: 
+омега-3 и омега-6 должны поступать с пищей.
+омега-6 — растительные масла и орехи.
+- максимальное кол-во от 100%
+- снижают концентрацию "плохого" холестерина
+- участвуют в транспорте кислорода
+- регулируют обмен веществ; дофамин, сератонин
+- формирование половых гормонов; репродуктивной системы
+- ЩЖ щитовидка
+- отвечают за здоровье мозга и костей; волосы и кожи;
+- контролируют уровень глюкозы в крови;
+- могут снижать кровяное давление.
+
+Функции омега-3:
+• являются частью мембран клеток;
+• отвечают за свертываемость крови;
+• регулируют воспалительные процессы;
+• профилактика болезней сердца и онкологии;
+• снижение кровяного давления.
+
+- Рыба: сельд рекордстмен, сибас, дорадо, 
+- речная рыба тоже, но в гораздо меньших кол-вах
+- морепродукты
+	- 100гр рыбы это ~15гр жиров
 
 - 80% жиров производит печень, 20% поступает извне
+- Жиры формируют гармоны
+- Жир формирует [[Желчь Желочный]]
+- Позволяет усваивать жирорастворимые [[Витамины и минералы]]
+- Важны для надпочичников, Картизол
+- Нервная система зависит от качественных жиров, передача информации, импульса, энергии.
+
+# Омега - 3
+- Помогает надпочечьникам меньше картизола меньше [[Стресс]]а
+- Нервная система передача импульсов, эмоциональное состояние 
+- Когнитивные функции IQ
+- Анализ, омега-3 индекс в крови: 6-8% - высокий, 4-6% - средний
+- Косвенные [[Холестерин]]овые  фракции ЛПВП, ЛПНП
+	- ЛПВП ниже 1.8ммоль/л - дефицит
+	- ЛПНП выше 3.5ммоль/л - переизбыток
+	- следовательно это может быть: дефицит белка; застой желчи; дефицит витамина Д; дефицит омега-3; повышенные сахара углеводы.
+
+### Виды омега-3
+1. Альфа-линолевая кислота (ALA) может синтезироваться в организме
+2. Эйказапентаеноевая кислота (EPA) не может синтезироваться
+3. Докозагексаеноевая кислота (DHA) не может синтезироваться
+
+Опитамльное соотношение БАДа 300мг 120-180 EPA-DHA
+
+
+# Омега 6-9
+- Растительные масла; орехи; семена; насыщенные виды жиров: сало, масло сливочное
+- 
+
+# Норма жиров:
+Рекомендуемая норма жиров — 0,8—1,5 г на 1 кг веса. 
+Пример: девушке весом 60 кг нужно 48—90 г жира в день.
+
+
+Липолиз расщепление жира начинается через 2-3 недели
+Чем меньше жировой ткани тем меньше он ее накапливает, чем больше жировой ткани тем больше он ее накапливает. 
 
 ---
 # zero-link
