--- a/Кортизол.md
+++ b/Кортизол.md
@@ -7,6 +7,14 @@ Tags: #гормон
 - Адаптирует организм к состоянию [[Стресс]] как и адреналин
 - Включатель симпатический, выключатель парасимпатический 
 - Застревание [[Стресс]]а активирует симпатический отдел
+- Не можем уснуть много кортизола
+- Не можем проснутся мало картизола
+
+Повышены кортизол снижает синтез пищеварительных ферментов, желудочную кислоту, что приводит  к нарушению моторики следствие наружается всасывание БЖУ
+
+Анализы
+- из слюны 4 раза в течении дня
+
 ---
 # Title
 
