--- a/Медитация.md
+++ b/Медитация.md
@@ -20,7 +20,7 @@ Tags: #
 # Факты:
 - Медитация снижает симпатическую чрезмерную стимуляцию. 
 	- Снижение напряжение автономной нервной системы которую мы не контролируем.
-- Снижение уровень холестерина
+- Снижение уровень [[Холестерин]]
 - Медитация значительно повысила толерантность к физической нагрузке и максимальную рабочую нагрузку, а также задержала начало депрессии
 - Практика медитации и йоги положительно влияет на экспрессию генов. 
 	- Модулировала экспрессию генов у пациентов с раком простаты.
