--- a/Мозг потенциал.md
+++ b/Мозг потенциал.md
@@ -6,7 +6,7 @@ Tags: #
 
 Хобби: занятие хобби в течение 1 часа или более каждый день может защитить от деменции в пожилом возрасте. Подразумевает любое увлечение которое вам нравится. Вспомните дедов на улице рубяшихся в карты, шахматы и домино )
 1. [[Чтение]]
-2. [[Координация - Движение]]
+2. [[Энергия - Движение]]
 3. [[Координация - Танцы]]
 4. [[Координация и слух - Музыка]] 
 5. 
