--- a/Печень.md
+++ b/Печень.md
@@ -2,9 +2,10 @@
 Tags: #
 
 ---
-# Title
-- 80% холестерина вырабатывается печенью
-- 
+# Функция:
+- 80% [[Холестерин]]а вырабатывается печенью
+- печень тратить 17% от всех каллорий в день 
+- Производит [[Желчь Желочный]], требуется для усвоение жирорастворимых витаминов A, D, E, K
 # [Продукты для печени](https://www.youtube.com/watch?v=aSS6E38HGik):
 1. Крестоцветные: кейл, броколи, рукола, брюсельская, рукола, редька, васаби, горчица, листовая горчица, редиска, дайкон, Кресс-салат, Сурепка
 	1. Проростки крестоцветных в салаты
@@ -22,8 +23,8 @@ Tags: #
 - Вздутие живота
 
 
-# Холестерин
-холестериновый компонент жиров запускает процесс производства стероидных гормонов: [[Эстроген]] [[Тестостерон]] [[Кортизол]]
+# [[Холестерин]] 
+[[Холестерин]]овый  компонент жиров запускает процесс производства стероидных гормонов: [[Эстроген]] [[Тестостерон]] [[Кортизол]]
 
 
 ---
@@ -32,9 +33,8 @@ Tags: #
 
 ---
 # Links
- &emsp; | &emsp; 
 
 - https://www.youtube.com/watch?v=uZXuBuJGUxE
-- 
+- https://www.youtube.com/watch?v=aCTq-A2Cfmg
 
 ---
