--- a/Пищеварене ЖКТ.md
+++ b/Пищеварене ЖКТ.md
@@ -2,8 +2,28 @@
 Tags: #
 
 ---
-# Title
-- пепсин
+# Помощь в пищеварение:
+- пепсин и энзимы
+- фосфадилхолин (лецитин)
+- Лимонный сок за 5-10мин до еды 30мл на 100мл воды
+	- либо поливать активно еду для большей выроботки кислоты
+- лецитин
+
+
+# Проблемы:
+Хронический запор — это преимущественно функциональное расстройство толстой кишки. Как правило ни анализы, ни обследования не выявляют изменений у пациента, объясняющих его недомогание. При запоре функция мышц кишечника вялая, и это замедляет продвижение каловых масс по кишечнику. Если моторика кишечника замедлена, то и позывы к опорожнению кишечника также может быть подавлены. Из-за медленного продвижения каловых масс по толстой кишке происходит всасывание бòльшего количества жидкости через ее стенку, каловые массы становятся твердыми, а иногда из-за спазмов кишечника —похожими на овечий кал.
+
+# Сладкое после еды
+Если плохой отток желчи, то после еды хочется сладкого. 
+
+
+# пробиотики и пребиотики
+- пробиотики это бактерий полезные для ЖКТ
+- пребиотики корм для бактерий например клетчатка
+	- псилиум оболочка семя подорожника 
+	- оболочка пшеницы более грубая
+
+
 
 
 ---
