--- a/Поджелудочная железа.md
+++ b/Поджелудочная железа.md
@@ -5,6 +5,9 @@ Tags: #
 # Title
 Чаще всего первопричиной проблем с ПЖ являеются проблемы оттока желочи (печени)
 
+Ангиомы
+папиломы
+
 </br>
 
 ---
