--- a/Психосоматика.md
+++ b/Психосоматика.md
@@ -1,7 +1,10 @@
 2022-02-0810:15
 Tags: #
 
+- Я молодец! Во всех своих ошибках и успехах, обыденности и радости, решениях и бездействие. Я молодец! 
 ---
+
+
 # Причины:
 - Перегрузка из головы выбрасывается на ЖКТ и тело
 - В психосоматике болезнь рассматривается как реакция тела на обстоятельства жизни. Тело старается помочь. Важно понимать эту логику, чтобы организм сам отключил этот процесс, и можно было свести лекарственную помощь к минимуму.
