--- a/Стресс.md
+++ b/Стресс.md
@@ -2,16 +2,23 @@
 Tags: #
 
 ---
-# Title
+# Быстрый выход из стресса
+- Физическая активность, пропотеть
+- Увеличить кол-во жидкости
+- Добавить клетчатку: зелень, ягоды
+- Дыхательные и медитативные упражнения
 
-</br>
----
-###### zero-link </br>
+# Причины:
+- [[Кортизол]] - надпочечники
 
-</br>
+
+
 ---
-###### Links </br>
- &emsp; | &emsp; 
+# zero-link
+
+---
+# Links
+
 
 
 ---
