--- a/Ферментирование продуктов.md
+++ b/Ферментирование продуктов.md
@@ -40,6 +40,11 @@ Tags: #
 минимум 2-3 дня на ферментаци, каждый день открывать и выпускать газы.
 в холодилнице 2-3 месяца
 
+Для моркови надо меньше соли
+
+1-3 столовые ложки соли в 1 литре воды.
+В зависимости от степени крупности соли одна столовая ложка может соответствовать разной массе соли, а значит, разной степени солености готовой партии. Чтобы добиться нужного вкуса, могут потребоваться некоторые эксперименты, а предпочтительное количество соли может варьироваться в зависимости от разных овощей. Соленая квашеная капуста может быть вкусной, но такое же количество соли может не сработать в партии тертой моркови.
+
 - Молодые огурцы содержат больше сахара, чем позднеспелые сорта,
 - капустой ситуация обратная: в поздней сахара больше и ферментируется она лучше.
 - 
