--- a/Энергия - Движение.md
+++ b/Энергия - Движение.md
@@ -2,7 +2,25 @@
 Tags: #
 
 ---
-# Title
+# Энергия
+- Бытовая активность тратит (10—30%) ккал
+- Тренировки (10%)
+	- Простой пример: для девушки 60 кг весом 40-минутная быстрая ходьба на дорожке потратит всего 210 ккал, а классическая часовая силовая тренировка в зале всего 150 ккал
+- Термический эффект пищи (10%) Это калории, которые тратятся на переваривание и усвоение пищи. Быстрее всего усваиваются жиры —энергии для их усвоения тратится минимум, а самыми энергозатратными являются белки — на них уходит до 30% от калорийности.
+- Рекомендации Всемирной организации здравоохранения (ВОЗ):
+	-  углеводы — 50—55%;
+	-  жиры — 30%;
+	-  белки — 15—20%
+- БЖУ для тех, кто занимается спортом:
+	• углеводы — 45—65%;
+	• жиры 20—35%;
+	• белки 15—35%.
+	- 1 г углеводов = 4,1 ккал;
+	- 1 г жира = 9,3 ккал;
+	- 1 г белка = 4,1 ккал.
+- Пример: если ваша дневная норма — 1600 ккал, то на углеводы должно приходиться 800—880 ккал, на жиры — 480 ккал и на белки — 240—320 ккал. Переводя в граммы, получаем: углеводы — 195—215 г, жиры — 52 г, белки — 59—78 г
+
+
 В Древнем Китае еще в 3000–1000 годах до н. э. классическая «Книга Желтой Императорской Внутренней Медицины» (Huang Ti, 1949) впервые описала принцип, согласно которому гармония человека с миром является ключом к профилактике, а профилактика — ключом к долгой жизни (Шампо). и Кайл, 1989). Эти принципы превратились в концепции, которые стали центральными в китайской философии даосизма 6-го века, где долголетие посредством простой жизни достигло статуса философии, которая направляет китайскую культуру до наших дней. Тайцзи-цюань, система упражнений, обучающая изящным движениям, зародилась еще в 200 г. до н.э. с Хуа То, и недавно было показано, что он снижает частоту падений у пожилых американцев
 
 В Индии также было известно, что правильная диета и физическая активность являются важными принципами повседневной жизни. Аджурведа, собрание медицинских и медицинских концепций, устно переданных еще в 3000 г. до н.э., превратилась в йогу, философию, которая включала в себя всесторонне разработанную серию поз на растяжку и гибкость. Принципы были впервые систематизированы в 600 г. до н.э. в Упанишадах, а затем в Йога-сутрах Патанджали где-то между 200 г. до н.э. и 200 г. н.э. Философия йоги также утверждала, что физическая гибкость, правильное дыхание и диета необходимы для контроля ума и эмоций и являются предпосылками для религиозного опыта. Как в Индии, так и в Китае в этот период связь между физическими упражнениями и здоровьем, возможно, привела к развитию медицинской специальности, которая сегодня нашла бы эквивалент в спортивной медицине (Snook, 1984).
