--- a/дискинезия желчевыводящих путей ДЖВП.md
+++ b/дискинезия желчевыводящих путей ДЖВП.md
@@ -8,7 +8,7 @@ Tags: #
 	- Конфликт идентификации: человек не может принять решения, начинать или не начинать заканчивать либо нет, либо не уверен в правильности решения.
 - [[Паразиты]] описторхи фасциолы печеночные сосальщики, лямблии
 - Спазм диафрагмы, отсутствие диафрагмального дыхания вызывает застойные явления. Диафрагма сжимает печень.
-- Обезвоживание, увеличивает густоту [[Желчь]]и.
+- Обезвоживание, увеличивает густоту [[Желчь Желочный]]и.
 
 ### Вода:
 - Мягкая это где мало солей, то бишь кипяченная или замороженная или пропущенная через фильтр обратного осмаса, температура около 70градусов
