--- a/Чай. Трава.md
+++ b/Чай. Трава.md
@@ -51,7 +51,7 @@ Tags: #
 
 # Травяные настойки(чай):
 - Успокоительный: священный базилик(тулси); ромашка; солодка; корень валерьяны.
-- Противовирусный: листья малины; таволга; лемонграсс; тысячелистник; плоды можжевельника; девясил; шалфей; цветы календулы; 
+- Противовирусный: листья малины или шиповник; таволга 4ч; лемонграсс; тысячелистник 1/2ч; плоды можжевельника; девясил 1/4ч; шалфей 2ч; цветы календулы 1/2ч; 
 - Для печени: бессмертник; фенхель; календула; таволга; корень одуванчика; корень солодки; репешок; ортосифон тычиночный;
 - Для желочи1: бессмертник; кукурузные рыльца; зверобой; тысячелистник; расторопша;  
 - Для желочи2: артишок; пижма; календула; имбирь; одуванчик; 
