--- a/Дофамин.md
+++ b/Дофамин.md
@@ -8,7 +8,9 @@ aliases: [дофамин, дофамина,] `аббревиатура; лучш
 Дофамин после того как цель не достигнута.
 связан Центром удовольствия
 Связан с мотивацией и предвкушения
-
+- Новое, биомеханика выделения когда мы узнаем что-то
+- Движение, тоже способствует выделению позволяет перегрузить гиппокам
+- 
 в
 
 ---
