--- a/Анализы.md
+++ b/Анализы.md
@@ -50,7 +50,8 @@ Tags: #
 Подозрения на гепатириоз
 - ТТГ ниже 0.4 выше 2.5 от сюда может быть слабость , проблемы с ЖКТ, чувство холода. **В идеале не выше 2**
 	- Если выше сдается дополнительно (АТ ТПО, АТ-ТГ) если они в норме то все в порядке. Если повышено то возможно аутоиммунный тиреодит (АИТ) и гипотериоз
-- T3 должен быть не менее 30% от Т4 и быть по верхней границе референсного значения 
+- T3 должен быть не менее 30% от Т4 и быть по верхней границе референсного значения. 
+	- Чем выше был свободный Т3 и чем ниже свободный Т4, тем больше шансов прожить дольше. То есть чем выше отношение свободных Т3/Т4, тем лучше для долголетия.
 - T4
 - Антитела повышены (АТ ТГ, АТ тпо)
 - УЗИ и внешняя симптоматика
