--- a/Висцеральный самомассаж.md
+++ b/Висцеральный самомассаж.md
@@ -157,7 +157,7 @@ Tags: #
 - Разминание нервных волокон которые отекли.
 - Боль как показатель того что мышечное волокно ущемило нерв
 - 
-
+![[cs_7274261.jpg]]
 
 ---
 # zero-link
