--- a/Продукты.md
+++ b/Продукты.md
@@ -136,6 +136,7 @@ Tags: #еееда
 
 # Фрукты
 - фрукты есть только сезонные
+- В кожуре содержатся флавонойды, особенно в цитрусовых
 - 2-3 яблока в день содержат норму фруктозы это примерно 25гр., у фруктозы не происходит резкий выброс инсулина, поэтому нет насыщения сразу. Так например арбуз можно съесть много, но полноценно усвоить будет сложнее и накладней для печени.
 - 15 г фруктозы всасывается у 100% лиц, 25 г фруктозы – у 90% испытуемых, однако большую дозу углевода (50 г) могут усвоить лишь 20-30% лиц.
 - 15 г фруктозы (доза, которая хорошо переносится практически всеми здоровыми лицами) – это много или мало? Такое количество фруктозы содержится в 250 г яблок или 300 г груш или 100 г кураги. Следует помнить, что помимо ягод и фруктов, фруктоза в большом количестве содержится в мёде, кукурузном сиропе, а также входит в состав многих промышленных продуктов питания в качестве альтернативы сахарозе.
