--- a/Витамины и минералы.md
+++ b/Витамины и минералы.md
@@ -217,6 +217,60 @@ Picolinate, Malat, Citrate, Glycinate
 - Кокосовая стружка, 
 - Зеленые бананы
 
+### Клечатка
+1. Грецкие орехи:
+    - Количество: примерно 30-60 граммов в день.
+    - Клетчатка: около 1,8-3,6 грамма.
+
+1. Бразильский орех:
+    - Количество: примерно 30-60 граммов в день.
+    - Клетчатка: около 2,1-4,2 грамма.
+
+2. Кедровые орехи:
+    - Количество: примерно 30-60 граммов в день.
+    - Клетчатка: около 1,5-3 грамма.
+
+3. Лук:
+    - Количество: примерно 30-50 граммов в день.
+    - Клетчатка: около 0,5-0,8 грамма.
+
+4. Петрушка:
+    - Количество: примерно 20-30 граммов в день.
+    - Клетчатка: около 1-1,5 грамма.
+
+5. Укроп:
+    - Количество: примерно 20-30 граммов в день.
+    - Клетчатка: около 1-1,5 грамма.
+
+6. Морковь:
+    - Количество: примерно 100-150 граммов в день.
+    - Клетчатка: около 2,8-4,2 грамма.
+
+7. Овсяные хлопья:
+    - Количество: примерно 30-60 граммов в день.
+    - Клетчатка: около 3-6 граммов.
+
+8. Гречка:
+    - Количество: примерно 50-100 граммов в день.
+    - Клетчатка: около 4-8 граммов.
+
+9. Киноа:
+    - Количество: примерно 50-100 граммов в день.
+    - Клетчатка: около 5-10 граммов.
+
+### не перевариваемой клетчатки:
+1. Цельные зерна: пшеница, рожь, овес, ячмень, кукуруза.
+2. Ржаной хлеб и хлеб из цельных зерен.
+3. Бобовые: фасоль, чечевица, горох.
+4. Орехи и семена: грецкие орехи, миндаль, кешью, семена льна, семена чиа.
+5. Фрукты: яблоки, груши, апельсины, малина, черника.
+6. Овощи: морковь, брокколи, капуста, цветная капуста, шпинат, брюссельская капуста.
+7. Ягоды: малина, черника, клюква.
+8. Сухофрукты: изюм, чернослив, инжир.
+9. Лен.
+10. Кокосовая стружка.
+
+
 
 # Железо
 
