--- a/Решения проблемы.md
+++ b/Решения проблемы.md
@@ -15,19 +15,38 @@ Tags: #
 
 
 Рефрейм Если у вас не получится, то вы всегда сможете вернутся к обычной жизни. 
-</br>
 
 
 
 [[Позитивные мыли]]
 
----
-###### zero-link </br>
+# Принятие решений в условиях не определённости
+- Когда мозг сталкивается с неопределённостью, артефакт [[Страх]]а. Следует задать вопрос.
+	- Что ещё я знаю?
+	- Откуда я это знаю?
+- Если есть что-то о чём мы задумались, значит мы уже это знаем.
+- Мозг старается заполнить пробелы связанными знаниями. Чем меньше пробелов, тем мы целостней в своем решений.
+`Как достроить недостающие пробелы?`
+- Где я могу взять, то чего мне нехватает?
+- Как я могу получить этот, по факту никак. Только эмпирически, только окунаясь в него.
+- Но правильный вопрос будет, Как я могу узнать?
+	- Друзья, интернет, книги
+- Где еще я могу
+	- Совету виртуальных проекций друзей в нашей голове
+	- Квадрат декарта
+	- Адвокат дьявола
+	- Совет авторитета
+`Шар неопределености. Чем больше знаний, тем больше раздувается-разрастается и неопределености несет т.к. соприкосается с большими поверхностями`
 
-</br>
+`Сожеление это анализ из будущего, которое не произошло. Просто надо принять факт безвозвратных потерь`
+
+**выбирая, люди стараются не столько максимизировать ожидаемый выигрыш, сколько минимизировать возможности сожаления о том, что было бы, если бы они выбрали иначе**
+
 ---
-###### Links </br>
- &emsp; | &emsp; 
+# zero-link
+
+---
+# Links
 
 
 ---
