--- a/Психосоматика.md
+++ b/Психосоматика.md
@@ -15,6 +15,47 @@ Tags: #
 - Шапку одень, а то простудишься. 
 - Обвинения в чем-то: от тебя воняет; ходишь грязный; как твой отец(при этом хуми обкладывает всю жизнь); ничего не помнишь, память плохая.
 
+- стресс — психика — мозг — орган
+
+Первая фаза КАФ — конфликт активная фаза
+Вторая фаза ПКФ — постконфликтная фаза
+
+`ЧЕМ ИНТЕНСИВНЕЕ И ДОЛЬШЕ КАФ, ТЕМ ИНТЕНСИВНЕЕ И ДОЛЬШЕ ПКФ`
+
+ТРЕК (РЕЛЬС) - это ассоциаций с неприятной сиуайцией с которой вы столкнулись в жизни. И теперь она постоянно будет ассоцириоваться с 
+
+` Все, что окружает стрессовую ситуацию, и все, что может о ней напоминать, — это потенциальный ТРЕК. Напоминалка, которая срабатывает каждый раз при контакте с ней.`
+
+Изолированность восприятия — это состояние, в котором че-
+ловек остался один на один со своей проблемой, когда нет никакой
+моральной и физической поддержки, когда человек воспринимает
+ситуацию как безвыходную, когда помощи ждать неоткуда и не от
+кого, когда не с кем обсудить ситуацию и возможные варианты
+решения проблемы.
+
+СДХ (Синдромом Дирка Хамера) - это неожиданная, драматичная и изолированно
+воспринятая ситуация. В обычной жизни мы просто называем это
+словом «стресс» или «шок»
+Почему на одну и ту же ситуацию у одного человека реакцией
+становятся проблемы с кишечником или кожей, у другого — ин-
+сульт, у третьего — инфаркт? Вспоминаем: психика-мозг-орган.
+Мозг и орган реагируют одинаково, это биология. А психика раз-
+ная, поэтому после одного и того же стресса могут быть совершен-
+но разные симптомы.
+
+### кусковые конфликты
+- Захватить кусок. Переварить кусок. Избавиться от куска.
+- невозможность переварить проглоченный кусок.
+- Клетки всех этих органов, состоящих из энтодермы, в активной фазе конфликта (КАФ) размножаются и усиливают свою функцию. Боль, воспаление, разрушение и другие симптомы появляются уже после разрешения конфликта — в ПКФ. В этом процессе участвуют самые древние бактерии, которые живут в содружестве с энтодермальными тканями, — кандиды и туберкулезные палочки
+1.  Не могу проглотить кусок - ротовая полость, горло, пищевод
+2. Не могу переварить проглоченный кусок» (неперевариваемая ситуация) - желудок, поджелудочная, тонкий кишечник.
+3. Не могу избавиться от ненужного куска, («Не могу избавиться от дерьмовой ситуации») - толстый кишечник, от слепой кишки до прямой кишки
+4. Середина ЖКТ — переваривание куска. Низ ЖКТ — избавление от куска.
+«Неперевариваемым куском» может быть теща, свекровь, супруг, ситуация на работе, застрявшие на счете деньги, недвижимость, документы, бизнес-проект, раздражающие соседи и т. д. Таким образом, у человека кусок — это не только что-то материальное, но и что-то в переносном смысле.
+
+Если разрешится дерьмовая ситуация, то заболит толстый кишечник, появится слизь или кровь в стуле, кишечные колики, могут поставить любой диагноз, связанный с толстым кишечником: рак, дивертикулит, неспецифический язвенный колит, синдром раздраженного кишечника и т. п
+
+
 ### Как понять?:
 Самоанализы, психологи, психотерапевты
 - Понять какие драматические события были предшествовали начавшимися проблемами со здоровьем. Было ли оно неожиданным и проживалось чувством одиночества?
@@ -23,6 +64,7 @@ Tags: #
 - Так же болезнь может возникать после решения конфликта
 - Прятки. Если я не вижу опасность, то и опасность не видит меня.
 
+`Если ребенок родился с симптомами, это означает, что все случилось внутриутробно — пока он был внутри мамы, либо на него «напал медведь», то есть случился сильный стресс, либо медведь напал на маму, и ребенок это почувствовал.`
 
 - Перегрузка из головы выбрасывается на ЖКТ и тело
 - В психосоматике болезнь рассматривается как реакция тела на обстоятельства жизни. Тело старается помочь. Важно понимать эту логику, чтобы организм сам отключил этот процесс, и можно было свести лекарственную помощь к минимуму.
@@ -40,6 +82,12 @@ Tags: #
 4. Вторичная выгода.  Это то выгодное состояние, которое дает болезнь. Да, сама болезнь страдание. Но тогда муж/дети  обратят внимание, станут заботиться. Тогда не придется идти в школу/ на работу и терпеть агрессивного начальника. Очень ярко это проявляется в болезни детей (тогда мы работаем со стрессами мамы, они отражаются на ребенке, примерно до 7-9 лет). Какая я буду мама, если ребенок болеет? Я мобилизуюсь, буду хорошей мамой, упорной. Посмотрите, какая я внимательная и старательная, мне сочувствуют. Это проявляется на бессознательном уровне. Эти чувства бывает трудно признавать, за ними могут также скрываться довольно болезненные истории.
 
 # Решение:
+`Конфликт считается разрешенным тогда, когда он БОЛЬШЕ НЕ МОЖЕТ ПОВТОРИТЬСЯ. Если есть хотя бы 0,1 % вероятность повторения конфликта, психика не отпустит ситуацию, и тело не сможет стабильно перейти в ПКФ (в фазу выздоровления), оно так и будет прыгать туда-сюда из первой фазы во вторую и назад. Это называется «зависший конфликт».`
+1. Всегда, всеми силами и средствами нужно полностью, на 110 % разрешать конфликт
+2. Нужно полностью один или несколько раз максимально эмоционально проговорить свою ситуацию с кем-то, кто готов слушать. Нужно выговорить ее из себя, это снижает эмоциональный заряд внутри, изолированность, драматичность.
+
+
+
 - Найти причину, событие или внушения(самовнушение), которое запустило реакцию психики. 
 - Снять внушение(самовнушение). Понять те ограничение которое было наложено. 
 - Проработать событие убрать влияние или нейтрализовать влияние этого события.
