--- a/Решения проблемы.md
+++ b/Решения проблемы.md
@@ -2,7 +2,7 @@
 Tags: #
 
 ---
-## Решения любой проблемы: 
+# Решения любой проблемы: 
 - Каждый человек должен выстраивать четкую цепочку: мысль — решение — действие.
 
 ###### Обстоятельства настоящего времени — не показатель
@@ -13,8 +13,16 @@ Tags: #
 ###### Подмечайте негативные мысли и эмоции
 - Ведите дневник своих мыслей и практикуйте медитацию для этого.
 
+###### Рефрейминг
+Когнитивное переосмысление может быть полезным во многих отношениях, например, при попытке улучшить память, уменьшить тревогу перед экзаменами и помочь родителям и детям справиться с инвалидностью.
 
-Рефрейм Если у вас не получится, то вы всегда сможете вернутся к обычной жизни. 
+Когнитивное переосмысление может относиться практически к любому сознательному сдвигу в ментальной перспективе человека. По этой причине его обычно путают как с когнитивной реструктуризацией, так и с когнитивным искажением. Тем не менее, между этими тремя есть определенные различия. **Рефрейминг** — это общее изменение мышления человека, будь то положительное или отрицательное изменение. 
+**Реструктуризация** — это акт терапевтического изменения образа мышления для укрепления себя, а это означает, что он всегда имеет положительный оттенок. Таким образом, когнитивная реструктуризация является частным случаем когнитивного рефрейминга.
+**Искажения** — это преувеличенные и, как правило, негативные мысли, не подкрепленные рациональным мыслительным процессом. Если кто-то страдает от ряда искажений (которые могут привести к депрессии, неправильным решениям и другим негативным результатам), может возникнуть необходимость в когнитивной реструктуризации. Следовательно, искажение — это проблема, которую можно решить с помощью когнитивного рефрейминга.
+
+- В разных ситуациях одно и то же поведение может оказаться и полезным и вредным. В данном случае, если изменить контекст сообщения, то меняется и подход к содержанию.
+- Состоит в том, чтобы изменить ценность самого сообщения. Например, если человек лжет, значит, у него есть хоть какая-то цель. Рефрейминг содержания направлен в первую очередь на изменение восприятия объекта, что для субъекта проявляется в смещении смысловых акцентов и приводит к возникновению новых ощущений.
+- Если у вас не получится, то вы всегда сможете вернутся к обычной жизни. 
 
 
 
